<?xml version="1.0"?>
<package format="2">
  <name>opennn</name>
  <version>1.0.0</version>
  <description>
    Open source Neural Network and Deep Learning libary.
  </description>
  <license>LGPL-3.0</license>

  <url>https://github.com/aeolusbot/OpenNN</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>

