cmake_minimum_required(VERSION 3.18)

if(UNIX AND NOT APPLE)
	option(USE_OpenMP "Use OpenMP" ON)
	if(USE_OpenMP)
		find_package(OpenMP)
		if(OPENMP_FOUND)
			set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
			set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
		endif()
	endif()
endif()

project(examples)

if(NOT DEFINED OpenNN_BUILD_EXAMPLES)
    option(OpenNN_BUILD_EXAMPLES "Build OpenNN examples" ON)
endif()

if(NOT DEFINED OpenNN_BUILD_BENCHMARKS)
    option(OpenNN_BUILD_BENCHMARKS "Build OpenNN benchmark targets" OFF)
endif()

option(OpenNN_BUILD_BLANK "Build OpenNN blank examples" ON)

if(OpenNN_BUILD_EXAMPLES)
    if(OpenNN_BUILD_BLANK)
        add_subdirectory(blank)
    endif()

    add_subdirectory(airfoil_self_noise)
    add_subdirectory(amazon_reviews)
    add_subdirectory(breast_cancer)
    add_subdirectory(emotion_analysis)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/beijing_pm25_forecasting/CMakeLists.txt")
        add_subdirectory(beijing_pm25_forecasting)
    endif()
    add_subdirectory(iris_plant)
    add_subdirectory(mnist)
    add_subdirectory(melanoma_cancer)
    add_subdirectory(translation)
    add_subdirectory(yolo)
endif()

if(OpenNN_BUILD_BENCHMARKS)
    add_subdirectory(capacity_benchmark)
    add_subdirectory(memory_benchmark)
    add_subdirectory(training_speed_benchmark)
    add_subdirectory(inference_speed_benchmark)
    add_subdirectory(resnet50_training_speed_benchmark)
    add_subdirectory(resnet50_max_batch_benchmark)
    add_subdirectory(image_classification_max_batch_benchmark)
    add_subdirectory(transformer_max_batch_benchmark)
    add_subdirectory(higgs_max_batch_benchmark)
    add_subdirectory(recurrent_lstm_forecasting_benchmark)
endif()
