cmake_minimum_required(VERSION 3.18)

project(examples)

if(NOT DEFINED OpenNN_BUILD_EXAMPLES)
    option(OpenNN_BUILD_EXAMPLES "Build OpenNN examples" ON)
endif()

option(OpenNN_BUILD_BLANK "Build OpenNN blank examples" ON)

if(OpenNN_BUILD_EXAMPLES)
    if(OpenNN_BUILD_BLANK)
        add_subdirectory(blank)
    endif()

    add_subdirectory(airfoil_self_noise)
    add_subdirectory(amazon_reviews)
    add_subdirectory(bert)
    add_subdirectory(breast_cancer)
    add_subdirectory(emotion_analysis)
    add_subdirectory(gpt2)
    if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/beijing_pm25_forecasting/CMakeLists.txt")
        add_subdirectory(beijing_pm25_forecasting)
    endif()
    add_subdirectory(forecasting_tinyml)
    add_subdirectory(iris_plant)
    add_subdirectory(mnist)
    add_subdirectory(melanoma_cancer)
    add_subdirectory(text_generation)
    add_subdirectory(translation)
    add_subdirectory(yolo)
endif()
